--- a/_data/team.yml
+++ b/_data/team.yml
@@ -4,8 +4,14 @@
 - name: Bruno Missi Xavier
   image: xavier.jpg
 
+- name: Jhonatan Gonçalves Dantas
+  image: dantas.jpg
+
+- name: Leandro Ferreira
+  image: ferreira.jpg
+
 - name: Gabriel Valane
   image: valane.jpg
 
-#- name: Douglas Gusson
-#  image: gusson.jpg
+- name: Douglas Gusson
+  image: gusson.jpg
