--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ author: "Labora"
 
 # Build settings
 markdown: kramdown
-permalink: /:title/
+permalink: /posts/:title/
 google_maps_javascript_api_key: "AIzaSyCdvKiZ7dmgeAGH3GicFsgkMdG0VtZbTew"
 
 sass:
