trocado cientifica por tecnologica

--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -1,4 +1,4 @@
-- titulo: "Credenciamento e Mostra Científica"
+- titulo: "Credenciamento e Mostra Tecnológica"
   descricao: 
   horario: "20/03/2020 - 16:00"
   local: "FDCI"
