--- a/_config.yml
+++ b/_config.yml
@@ -25,5 +25,16 @@ plugins:
   - jekyll-seo-tag
   - jekyll-sitemap
 
+paginate_path: "/p/:num/"
+
+pagination:
+  enabled: true
+  per_page: 5
+  permalink: '/p/:num/'
+  title: ' - page :num'
+  limit: 0
+  sort_field: 'date'
+  sort_reverse: true
+
 
 exclude: ["Gemfile", "Gemfile.lock", "README.md"]
